--- a/index.html
+++ b/index.html
@@ -4,9 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Studio</title>
+    <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon.ico">
 </head>
 <body>
-    
+    <!-- Header section -->
+    <header>
+        <nav>
+            <a href="">Web<span>studio</span></a>
+            <ul>
+                <li>
+                    <a href="">Studio</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+    </header>
+    <main>
+        <!-- Hero section -->
+        <section>
+            <h1>Effective Solutions <br>for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        <!-- Features section -->
+        <section>
+            <h2 hidden>Our features</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business <br>problem to walk away with the <br>perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the <br>brand's audience for the best price <br>within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that <br>present the strongest digital growth <br>opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital <br>experiences. We bring forth a deep <br>passion for problem-solving.</p>
+                </li>
+            </ul>
+
+        </section>
+        <!-- Services section -->
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li><img src="./images/services/service1.jpg" alt="Monitor with design on the screen" width="360" height="360"></li>
+                <li><img src="./images/services/service2.jpg" alt="Iphone screens laying" width="360" height="360"></li>
+                <li><img src="./images/services/service3.jpg" alt="Hand holding the phone" width="360" height="360"></li>
+            </ul>
+        </section>
+        <!-- Team section -->
+        <section>
+            <h3>Our Team</h3>
+            <ul>
+                <li>
+                    <img src="./images/our_team/Mark-Guerrero.jpg" alt="Man with beard" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/our_team/Tom-Ford.jpg" alt="Man smiles" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer/p>
+                </li>
+                <li>
+                    <img src="./images/our_team/Camila-Garcia.jpg" alt="Girl with long hair" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/our_team/Daniel-Wilson.jpg" alt="Man with beard smiles" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <!-- Footer section -->
+    <footer>
+        <a href="">Web<span>studio</span></a>
+        <p>Increase the flow of customers and <br>sales for your business with digital <br>marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
