--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header section -->
     <header>
         <nav>
-            <a href="">Web<span>studio</span></a>
+            <a href="./index.html">Webstudio</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -25,15 +25,21 @@
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
     <main>
         <!-- Hero section -->
         <section>
-            <h1>Effective Solutions <br>for Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
         <!-- Features section -->
@@ -42,19 +48,19 @@
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business <br>problem to walk away with the <br>perfect and creative solution. </p>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
-                    <p>Bring the key message to the <br>brand's audience for the best price <br>within the shortest possible time.</p>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that <br>present the strongest digital growth <br>opportunities and minimize risk.</p>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital <br>experiences. We bring forth a deep <br>passion for problem-solving.</p>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
 
@@ -70,7 +76,7 @@
         </section>
         <!-- Team section -->
         <section>
-            <h3>Our Team</h3>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/our_team/Mark-Guerrero.jpg" alt="Man with beard" width="264" height="260">
@@ -80,7 +86,7 @@
                 <li>
                     <img src="./images/our_team/Tom-Ford.jpg" alt="Man smiles" width="264" height="260">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer/p>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/our_team/Camila-Garcia.jpg" alt="Girl with long hair" width="264" height="260">
@@ -97,8 +103,8 @@
     </main>
     <!-- Footer section -->
     <footer>
-        <a href="">Web<span>studio</span></a>
-        <p>Increase the flow of customers and <br>sales for your business with digital <br>marketing & growth solutions.</p>
+        <a href="./index.html">Webstudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
