--- a/index.html
+++ b/index.html
@@ -5,106 +5,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
     <!-- Favicon -->
 <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon.ico">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Header section -->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li>
-                    <a href="">Studio</a>
+    <header class="page-header">
+        <nav class="navigation">
+            <a class="logo-header link" href="./index.html">Web<span class="logo-part-header">Studio</span></a>
+            <ul class="menu list">
+                <li class="menu-item">
+                    <a class="menu-link link" href="">Studio</a>
                 </li>
-                <li>
-                    <a href="">Portfolio</a>
+                <li class="menu-item">
+                    <a class="menu-link link" href="">Portfolio</a>
                 </li>
-                <li>
-                    <a href="">Contacts</a>
+                <li class="menu-item">
+                    <a class="menu-link link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
-            <ul>
+            <ul class="tel-email list">
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
         <!-- Hero section -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero-title" >Effective Solutions for Your Business</h1>
+            <button class="order-btn" type="button">Order Service</button>
         </section>
         <!-- Features section -->
-        <section>
-            <h2 hidden>Our features</h2>
-            <ul>
+        <section class="features">
+            <h2 class="features-title" hidden>Our features</h2>
+            <ul class="features-list list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    <h3 class="feature-subtitle">Strategy</h3>
+                    <p class="feature-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h3 class="feature-subtitle">Punctuality</h3>
+                    <p class="feature-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="feature-subtitle">Diligence</h3>
+                    <p class="feature-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="feature-subtitle">Technologies</h3>
+                    <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
 
         </section>
         <!-- Services section -->
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="./images/services/service1.jpg" alt="Monitor with design on the screen" width="360" height="300"></li>
-                <li><img src="./images/services/service2.jpg" alt="Iphone screens laying" width="360" height="300"></li>
-                <li><img src="./images/services/service3.jpg" alt="Hand holding the phone" width="360" height="300"></li>
+        <section class="our-functions">
+            <h2 class="our-functions-title header-2">What are we doing</h2>
+            <ul class="our-functions-list">
+                <li class="function-1">
+                    <img class="function-1-image" src="./images/services/service1.jpg" alt="Monitor with design on the screen" width="360" height="300">
+                </li>
+                <li class="function-2">
+                    <img class="function-2-image" src="./images/services/service2.jpg" alt="Iphone screens laying" width="360" height="300">
+                </li>
+                <li class="function-3">
+                    <img class="function-3-image" src="./images/services/service3.jpg" alt="Hand holding the phone" width="360" height="300">
+                </li>
             </ul>
         </section>
         <!-- Team section -->
-        <section>
-            <h2>Our Team</h2>
+        <section class="our-team">
+            <h2 class="our-team-title header-2">Our Team</h2>
             <ul>
-                <li>
-                    <img src="./images/our_team/Mark-Guerrero.jpg" alt="Man with beard" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                <li class="worker-card">
+                    <img class="worker-image" src="./images/our_team/Mark-Guerrero.jpg" alt="Man with beard" width="264" height="260">
+                    <h3 class="worker-name">Mark Guerrero</h3>
+                    <p class="worker-position">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/our_team/Tom-Ford.jpg" alt="Man smiles" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="worker-card">
+                    <img class="worker-image" src="./images/our_team/Tom-Ford.jpg" alt="Man smiles" width="264" height="260">
+                    <h3 class="worker-name">Tom Ford</h3>
+                    <p class="worker-position">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/our_team/Camila-Garcia.jpg" alt="Girl with long hair" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="worker-card">
+                    <img class="worker-image" src="./images/our_team/Camila-Garcia.jpg" alt="Girl with long hair" width="264" height="260">
+                    <h3 class="worker-name">Camila Garcia</h3>
+                    <p class="worker-position">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/our_team/Daniel-Wilson.jpg" alt="Man with beard smiles" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="worker-card">
+                    <img class="worker-image" src="./images/our_team/Daniel-Wilson.jpg" alt="Man with beard smiles" width="264" height="260">
+                    <h3 class="worker-name">Daniel Wilson</h3>
+                    <p class="worker-position">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Footer section -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="page-footer">
+        <a class="logo-footer" href="./index.html">WebStudio</a>
+        <p class="page-footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
