--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <a class="logo-header link" href="./index.html">Web<span class="logo-part-header">Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
-                    <a class="menu-link link" href="">Studio</a>
+                    <a class="menu-link link" href="./index.html">Studio</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link link" href="">Portfolio</a>
+                    <a class="menu-link link" href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="menu-item">
                     <a class="menu-link link" href="">Contacts</a>
@@ -73,7 +73,7 @@
         <!-- Services section -->
         <section class="our-functions">
             <h2 class="our-functions-title header-2">What are we doing</h2>
-            <ul class="our-functions-list">
+            <ul class="our-functions-list list">
                 <li class="function-1">
                     <img class="function-1-image" src="./images/services/service1.jpg" alt="Monitor with design on the screen" width="360" height="300">
                 </li>
@@ -88,7 +88,7 @@
         <!-- Team section -->
         <section class="our-team">
             <h2 class="our-team-title header-2">Our Team</h2>
-            <ul>
+            <ul class="worker-card-list list">
                 <li class="worker-card">
                     <img class="worker-image" src="./images/our_team/Mark-Guerrero.jpg" alt="Man with beard" width="264" height="260">
                     <h3 class="worker-name">Mark Guerrero</h3>
@@ -114,7 +114,7 @@
     </main>
     <!-- Footer section -->
     <footer class="page-footer">
-        <a class="logo-footer" href="./index.html">WebStudio</a>
+        <a class="logo-footer link" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
         <p class="page-footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
